# sunmagic

./: conf.yaml  pyproject.toml
characters/: en_nurse_debate.yaml  nurse_live2d.yaml
live2d-models/mao_pro/: mao_pro.pose3.json
